--- a/ansible/roles/kubenodes/tasks/main.yml
+++ b/ansible/roles/kubenodes/tasks/main.yml
@@ -1,20 +1,5 @@
-- name: Debug ansible_host
-  ansible.builtin.debug:
-    var: inventory_hostname
+- include_tasks: create.yml
+  when: action_mode == 'create'
 
-- name: Join Cluster
-  become: true
-  ansible.builtin.shell:
-    cmd: "{{ hostvars['Master']['kubernetes_join_command'] }}"
-  async: 600
-  poll: 5
-  when: not inventory_hostname | lower in hostvars['Master']['kubernetes_node_list'] | lower
-
-- name: Create local file system where to store mysql databases
-  become: true
-  ansible.builtin.file:
-    path: /srv/mysql
-    state: directory
-  async: 10
-  poll: 2
-  when: nfs_server
+- include_tasks: destroy.yml
+  when: action_mode == 'destroy' and hostvars['Master']['kubernetes_masters']
