--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 host_key_checking = False
 timeout=20
-inventory         = {{CWD}}/hosts
-roles_path        = {{CWD}}/roles
+inventory         = {{CWD}}/../ansible/hosts
+roles_path        = {{CWD}}/../ansible/roles
 
 [persistent_connection]
 network_cli_retries = 5
