--- a/ansible/roles/cert-manager/tasks/main.yml
+++ b/ansible/roles/cert-manager/tasks/main.yml
@@ -1,16 +1,5 @@
-# Download and apply manifest
-- name: Download cert-manager manifest to the cluster.
-  ansible.builtin.get_url:
-    url: https://github.com/jetstack/cert-manager/releases/download/v1.4.0/cert-manager.yaml
-    dest: /tmp/cert-manager.yaml
-    mode: '0664'
+- include_tasks: create.yml
+  when: action_mode == 'create'
 
-- name: Apply cert-manager manifest to the cluster.
-  community.kubernetes.k8s:
-    state: present
-    src: /tmp/cert-manager.yaml
-
-- name: Remove cert-manager manifest from the cluster.
-  ansible.builtin.file:
-    path: /tmp/cert-manager.yaml
-    state: absent
+- include_tasks: destroy.yml
+  when: action_mode == 'destroy' and hostvars['Master']['kubernetes_masters']
